--- a/component/layout/Layout.module.css
+++ b/component/layout/Layout.module.css
@@ -3,3 +3,11 @@
   max-width: 100%;
   height: auto;
 }
+
+@media only screen and (min-width:390px){
+  .main {
+  margin: 0;
+  width: 100%;
+  height: auto;
+}
+}
