--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,55 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  width: 100%;
-  background-image: url("../component/HomepageImage/areion\ wallpaper.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 1;
+@media only screen and (min-width: 1920px) {
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    width: 100%;
+    background-image: url("../component/HomepageImage/areion\ wallpaper.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+    width: auto;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@media only screen and (min-width: 390px) {
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    width: 100%;
+    background-color: #890f0d;
+    background-image: url("../component/img/Areion_Decal_Inverted_1.png");
+    height: 100%;
+    background-position: -8% 150%;
+    background-repeat: no-repeat;
+    background-size: 60rem;
 
-* {
-  box-sizing: border-box;
-  width: auto;
+    opacity: 1;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  * {
+    box-sizing: border-box;
+    width: auto;
+  }
 }
