--- a/component/layout/Layout.module.css
+++ b/component/layout/Layout.module.css
@@ -4,10 +4,10 @@
   height: auto;
 }
 
-@media only screen and (min-width:390px){
+@media only screen and (max-width: 390px) {
   .main {
-  margin: 0;
-  width: 100%;
-  height: auto;
-}
+    margin: 0;
+    width: 100%;
+    height: auto;
+  }
 }
