--- a/component/ItemsInShop/BrakeItems.module.css
+++ b/component/ItemsInShop/BrakeItems.module.css
@@ -1,58 +1,20 @@
-/* .container {
-  display: flex;
-  max-width: auto;
-  max-height: auto;
-
-  margin-left: 20px;
-} */
+/* @media only screen and (min-width: 900px) {
+  .container {
+    width: 90%;
+    height: auto;
+    padding: 15px 15px;
+    display: grid;
+    grid-template-columns: 300px 300px 300px 300px 300px 300px;
+  }
+}*/
 
 .container {
-  width: auto;
-  height: auto;
-  padding: 15px 15px;
-  display: grid;
-  grid-template-columns: 300px 300px 300px 300px 300px 300px;
-}
-
-.headerUser {
   width: 100%;
-  height: 3.5rem;
-  display: flex;
-  align-items: center;
+  height: auto;
+  display: grid;
   justify-content: space-between;
-  background-color: #f2f2f2;
-  padding: 0;
-  border-top: 3px solid #918d94;
-  text-align: center;
-}
-.headerUser h1 {
-  margin-left: 100px;
-  font-size: 2.5rem;
-  width: 150px;
-  margin-right: 30px;
+  grid-template-columns: 49.8% 49.8%;
 }
 
-.headerUser ul {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-.headerUser li {
-  margin-left: 3rem;
-}
-
-.headerUser a {
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.3rem;
-  color: #f32424;
-}
-
-.headerUser a:hover,
-.headerUser a:active,
-.headerUser a.active {
-  color: #fcb8d2;
-  border-bottom: 3px solid #fcb8d2;
-}
+/* @media only screen and (max-width: 899) {
+} */
