--- a/component/Cart/Cart.module.css
+++ b/component/Cart/Cart.module.css
@@ -1,36 +1,77 @@
-.container {
-  width: auto;
-  height: auto;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  grid-template-areas: "CartItem Checkout";
-  gap: 30px;
-  padding: 10px;
+/* @media (min-width: 900px) {
+  .container {
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-areas: "CartItem Checkout";
+    gap: 30px;
+    padding: 10px;
+  }
+
+  .float {
+    float: right;
+  }
+
+  .text1 {
+    margin-top: 10px;
+    margin-left: 48px;
+    color: rgb(255, 254, 254);
+    font-size: 2rem;
+  }
+
+  .text2 {
+    margin-top: 10px;
+    margin-left: 48px;
+    color: rgb(255, 254, 254);
+    font-size: 1.3rem;
+    margin-bottom: 0;
+  }
+
+  .nostyle {
+    text-decoration: none;
+  }
+} */
+@media (min-width: 900px) {
+  .container {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    max-width: auto;
+    justify-content: space-between;
+  }
+  .text {
+    color: white;
+    margin-left: 10%;
+  }
+
+  .container h4 {
+    color: white;
+    margin: 0.5rem 0;
+  }
 }
 
-.float {
-  float: right;
-}
 
-.text1 {
-  margin-top: 10px;
-  margin-left: 48px;
-  color: rgb(255, 254, 254);
-  font-size: 2rem;
-  
-}
 
-.text2 {
-  margin-top: 10px;
-  margin-left: 48px;
-  color: rgb(255, 254, 254);
-  font-size: 1.3rem;
-  margin-bottom: 0;
-  
-}
 
-.nostyle {
-  text-decoration: none;
+
+@media (max-width: 899px) {
+  .container {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    max-width: 800px;
+    justify-content: space-between;
+  }
+  .container h2 {
+    color: white;
+    margin: 0.5rem 0;
+  }
+
+  .container h4 {
+    color: white;
+    margin: 0.5rem 0;
+  }
 }
