--- a/component/FavorateList/WishItems.module.css
+++ b/component/FavorateList/WishItems.module.css
@@ -1,45 +1,64 @@
-.container {
-  height: auto;
-  display: inline;
-  width: 100%;
+@media (min-width: 900px) {
+  .container {
+    height: auto;
+    display: flex;
+    width: 80%;
+    margin: auto auto;
+    margin-bottom: 8px;
+    background-color: #eeeeee;
+    padding: 0.2rem;
+    display: flex;
+  }
+
+  .text {
+    font-size: 0.8rem;
+    font-style: italic;
+    width: 50%;
+    margin: auto auto;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+  }
+
+  .price {
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+  }
+
+  .image {
+    margin: auto auto;
+  }
 }
 
-.item {
-  margin: 1rem 1rem 1rem 2rem;
-  background-color: #dfdfde;
-  width: 800px;
-  padding: 1rem;
-  display: flex;
-}
+@media (max-width: 899px) {
+  .container {
+    height: auto;
+    display: flex;
+    width: 100%;
+    margin-bottom: 8px;
+    background-color: #eeeeee;
+    padding: 0.2rem;
+    display: flex;
+  }
 
-.item h3 {
-  /* margin: 0 0 0.5rem 0; */
-  /* margin-bottom: 2rem; */
-  margin-bottom: 100px;
-  font-size: 1.75rem;
-  display: inline;
-  color: black;
-}
+  .text {
+    font-size: 0.8rem;
+    font-style: italic;
+    width: 50%;
+    margin: auto auto;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+  }
 
-.item h6 {
-  margin-top: 15px;
-}
+  .price {
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+  }
 
-.text {
-  height: auto;
-
-  width: 600px;
-}
-
-.price {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-right: 48px;
-  color: black;
-}
-
-.image {
-  margin-top: 30px;
-  height: auto;
-  width: auto;
+  .image {
+    margin: auto auto;
+  }
 }
