--- a/component/FavorateList/WishList.module.css
+++ b/component/FavorateList/WishList.module.css
@@ -1,23 +1,51 @@
-.container {
-  margin-top: 20px;
-  margin-left: 50px;
-}
-.container h1 {
-  margin-left: 35px;
-  color: rgb(255, 251, 251);
+@media (min-width: 900px) {
+  .container {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    max-width: auto;
+    justify-content: space-between;
+  }
+
+  .text {
+    color: rgb(255, 251, 251);
+    margin-left: 10%;
+  }
+
+  .container h3 {
+    margin-left: 35px;
+    color: rgb(10, 10, 10);
+  }
+
+  .container p {
+    margin-left: 35px;
+    color: rgb(8, 8, 8);
+  }
 }
 
-.container h4 {
-  margin-left: 35px;
-  color: rgb(247, 245, 245);
-}
+@media (max-width: 899px) {
+  .container {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    max-width: 800px;
+    justify-content: space-between;
+  }
+  .container h1 {
+    color: rgb(255, 251, 251);
+  }
 
-.container h3 {
-  margin-left: 35px;
-  color: rgb(10, 10, 10);
-}
+  .container h4 {
+    color: rgb(247, 245, 245);
+  }
 
-.container p {
-  margin-left: 35px;
-  color: rgb(8, 8, 8);
+  .container h3 {
+    margin-left: 35px;
+    color: rgb(10, 10, 10);
+  }
+
+  .container p {
+    margin-left: 35px;
+    color: rgb(8, 8, 8);
+  }
 }
