--- a/component/layout/MainNavigation.module.css
+++ b/component/layout/MainNavigation.module.css
@@ -14,6 +14,11 @@
   left: 0%;
 }
 
+.cartbutton {
+  position: relative;
+  left: 7rem;
+}
+
 .navbarLinks ul {
   margin: 0;
   padding: 0;
@@ -40,7 +45,7 @@
 
 .toggle {
   position: absolute;
-  top: 0.4rem;
+  top: 0.3rem;
   right: 0.5rem;
   display: none;
   flex-direction: column;
@@ -77,6 +82,12 @@
   }
   .navbarLinks li a {
     padding: 0.5rem 1rem;
+  }
+
+  .cartbutton {
+    position: absolute;
+    top: 0.17rem;
+    left: 45%;
   }
 
   .navbarLinks.active {
