--- a/component/Login/LoginForm.module.css
+++ b/component/Login/LoginForm.module.css
@@ -51,7 +51,7 @@
   border: 1px solid #b40e0e;
   background-color: #fddddd;} */
 
-.control input{
+.control input {
   font: inherit;
   background-color: #f1e1fc;
   color: #0e0b0b;
@@ -85,4 +85,91 @@
 .actions button:hover {
   background-color: #f5a7a7;
   border-color: #f5a7a7;
+}
+
+@media (max-width: 899px) {
+  .auth {
+    margin: 50% auto;
+    width: 90%;
+
+    border-radius: 10px;
+    background-color: #ff6363;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    text-align: center;
+    color: aliceblue;
+    height: auto;
+  }
+
+  .auth h1 {
+    text-align: center;
+    color: white;
+  }
+
+  .control {
+    margin-bottom: 0.5rem;
+  }
+
+  .control label {
+    display: block;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+
+  .control p {
+    text-align: left;
+    margin-left: 45px;
+    margin-top: 0;
+    color: black;
+  }
+
+  .control input {
+    font: inherit;
+    background-color: #f1e1fc;
+    color: #0e0b0b;
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 80%;
+    text-align: left;
+    padding: 0.25rem;
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+
+  .control input {
+    font: inherit;
+    background-color: #f1e1fc;
+    color: #0e0b0b;
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 80%;
+    text-align: left;
+    padding: 0.25rem;
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+
+  .actions {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .actions button {
+    cursor: pointer;
+    font: inherit;
+    color: white;
+    background-color: #f58484;
+    border: 1px solid #f58484;
+    border-radius: 4px;
+    padding: 0.5rem 2.5rem;
+    width: 50%;
+  }
+
+  .actions button:hover {
+    background-color: #f5a7a7;
+    border-color: #f5a7a7;
+  }
 }
