--- a/component/Login/LoginForm.module.css
+++ b/component/Login/LoginForm.module.css
@@ -89,9 +89,9 @@
 
 @media (max-width: 899px) {
   .auth {
-    margin: 50% auto;
-    width: 90%;
-
+    margin: 30% auto;
+    width: auto;
+    max-width: 90%;
     border-radius: 10px;
     background-color: #ff6363;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
