--- a/component/Login/SignupForm.module.css
+++ b/component/Login/SignupForm.module.css
@@ -1,6 +1,6 @@
 .auth {
   width: auto;
-  max-width: 95%;
+  max-width: 900px;
   border-radius: 10px;
   background-color: #38015c;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
