--- a/component/layout/Footer.module.css
+++ b/component/layout/Footer.module.css
@@ -1,14 +1,15 @@
 .footer {
-  position: fixed;
+  /* position: sticky;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
   background-color: #f2f2f2;
   color: rgb(8, 8, 8);
   text-align: right;
+  height: 2rem;
 }
 
 .footer p {
-  margin-right: 1rem;
-  font-size: 0.5rem;
+  margin-right: 0.5rem;
+  font-size: 1rem;
 }
