--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,9 +27,10 @@ a {
   html,
   body {
     background-color: #b22727;
-    background-image: url("../component/img/Areion_Decal_Inverted_1.png");
-    background-size: 80% 9%;
+    /* background-image: url("../component/img/Areion_Decal_Inverted_1.png"); */
+    /* background-size: 80% 9%; */
     background-position: center;
-    background-repeat: no-repeat;
+    
+    min-height: 100%;
   }
 }
