--- a/component/User/UserNav.module.css
+++ b/component/User/UserNav.module.css
@@ -1,42 +1,34 @@
 .headerUser {
   width: 100%;
-  height: 3.5rem;
+  height: 2rem;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: #f2f2f2;
+  color: #f32424;
+  height: 1.5rem;
   padding: 0;
-  border-top: 3px solid #918d94;
-  text-align: center;
-}
-.headerUser h1 {
-  margin-left: 100px; 
-  font-size: 2.5rem;
-  width: auto;
-  margin-right: 30px;
-}
-
-.headerUser ul {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  align-items: center;
+  border-top: 3px solid #f32424;
 }
 
 .headerUser li {
-  margin-left: 3rem;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0 5px;
+  color: black;
+  font-size: 0.8rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .headerUser a {
   text-align: center;
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 0.8rem;
   color: #f32424;
 }
 
 .headerUser a:hover,
 .headerUser a:active,
 .headerUser a.active {
-  color: #fcb8d2;
-  border-bottom: 3px solid #fcb8d2;
+  border-bottom: 3px solid #f32424;
 }
