--- a/component/Login/LoginForm.module.css
+++ b/component/Login/LoginForm.module.css
@@ -1,14 +1,14 @@
 .auth {
   margin: 6rem auto;
   width: auto;
-  max-width:900px;
+  max-width: 900px;
   border-radius: 10px;
   background-color: #ff6363;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   padding: 1rem;
   text-align: center;
   color: aliceblue;
-  height: 22rem;
+  height: auto;
 }
 
 .auth h1 {
@@ -29,7 +29,7 @@
 
 .control p {
   text-align: left;
-  margin-left: 45px;
+  margin-left: 10%;
   margin-top: 0;
   color: black;
 }
@@ -80,6 +80,7 @@
   border-radius: 4px;
   padding: 0.5rem 2.5rem;
   width: 50%;
+  margin-bottom: 3%;
 }
 
 .actions button:hover {
@@ -119,7 +120,7 @@
 
   .control p {
     text-align: left;
-    margin-left: 45px;
+    margin-left: 10%;
     margin-top: 0;
     color: black;
   }
@@ -166,6 +167,7 @@
     border-radius: 4px;
     padding: 0.5rem 2.5rem;
     width: 50%;
+    margin-bottom: 3%;
   }
 
   .actions button:hover {
