--- a/component/Modal/LogoutModal.module.css
+++ b/component/Modal/LogoutModal.module.css
@@ -38,13 +38,6 @@
   justify-content: flex-end;
 }
 
-@media (min-width: 768px) {
-  .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
-  }
-}
-
 .card {
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
@@ -53,12 +46,12 @@
 
 .btn {
   color: rgb(26, 19, 19);
-  border: 2px solid rgb(245, 112, 2);
+  border: 2px solid (245, 112, 2) rgb;
   border-radius: 20px;
-  padding: 6px 36px;
+  padding: 6px 20px;
   display: inline-block;
   font-family: "Lucida Console", Monaco, monospace;
-  font-size: 20px;
+  font-size: 15px;
   text-align: center;
   letter-spacing: 1px;
   cursor: pointer;
@@ -66,10 +59,17 @@
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
-  width: 20%;
-  margin-top: 5px;
+  width: 26%;
+  margin: 5px;
 }
 
 .btn:hover {
   box-shadow: inset 0 0 0 50px #ff5f00;
+}
+
+@media (min-width: 768px) {
+  .modal {
+    left: calc(50% - 20rem);
+    width: 40rem;
+  }
 }
