--- a/component/layout/NavBar.module.css
+++ b/component/layout/NavBar.module.css
@@ -6,6 +6,7 @@
   color: #f32424;
   font-size: 1rem;
   height: 3rem;
+  z-index: 100;
 }
 
 .logo {
@@ -42,6 +43,7 @@
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  z-index: 100;
 }
 
 .navbarLinksli {
@@ -67,7 +69,7 @@
 }
 
 .navbarLinksul.active {
-  width: 35%;
+  width: 25%;
 }
 
 .navbarLinks a:hover,
