--- a/component/Cart/CartItem.module.css
+++ b/component/Cart/CartItem.module.css
@@ -10,15 +10,20 @@
     margin: 8px auto;
   }
 
+  .image {
+    width: 30%;
+    height: auto;
+  }
+
   .description {
-    font-size: 0.8rem;
+    font-size: 1.5rem;
     font-style: italic;
     width: 50%;
   }
 
   .description p {
     margin: 0 0 5px 5px;
-    font-size: 0.7rem;
+    font-size: 1rem;
     display: flex;
   }
 
@@ -66,6 +71,10 @@
     background-color: #eeeeee;
     padding: 0.2rem;
     display: flex;
+  }
+
+  .image {
+    width: 25%;
   }
 
   .description {
