--- a/component/ItemsInShop/CardForBrakeItems.module.css
+++ b/component/ItemsInShop/CardForBrakeItems.module.css
@@ -58,7 +58,6 @@
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
     width: 45%;
-
     margin: 2.5% 2.5%;
   }
 
@@ -127,7 +126,7 @@
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
     width: 90%;
-    margin: 0.5% 0;
+    margin: 0.5% 5%;
   }
 
   .card button:hover {
