--- a/component/Modal/LogoutModal.module.css
+++ b/component/Modal/LogoutModal.module.css
@@ -9,10 +9,10 @@
 }
 
 .modal {
-  position: fixed;
+  position: absolute;
   top: 30vh;
-  left: 10%;
-  width: 80%;
+  margin: 0 30%;
+  width: 40%;
   z-index: 100;
   overflow: hidden;
 }
@@ -59,7 +59,7 @@
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
-  width: 26%;
+  width: 30%;
   margin: 5px;
 }
 
@@ -67,9 +67,17 @@
   box-shadow: inset 0 0 0 50px #ff5f00;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 899px) {
   .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
+    margin: 0 5%;
+    width: 90%;
+  }
+
+  .content {
+    font-size: 1.5rem;
+  }
+
+  .btn {
+    width: 50%;
   }
 }
