--- a/component/ItemsInShop/BrakeDetail.module.css
+++ b/component/ItemsInShop/BrakeDetail.module.css
@@ -1,4 +1,4 @@
-.swiper {
+/* .swiper {
   width: 100%;
   height: 100%;
 }
@@ -8,7 +8,7 @@
   font-size: 18px;
   background: #fff;
 
-  /* Center slide text vertically */
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -28,16 +28,18 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .image {
   height: 100%;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
 }
+
 .image ul {
   padding: 0 0;
   margin: 0 0;
@@ -50,26 +52,26 @@
 .image h2 {
   position: absolute;
   text-align: center;
-  top: 90%;
+  top: 17%;
+  z-index: 100;
   color: #d1cecf;
 }
 
 .btn {
   position: absolute;
-  top: 71%;
+  top: 12.8%;
   border: none;
   cursor: pointer;
   text-align: center;
 }
 
-@media (max-width: 899px) {
+@media (max-width: 500px) {
   .btn {
-    top: 70.5%;
+    top: 12.4%;
   }
 
   .image h2 {
-    top: 90%;
-    color: #d1cecf;
+    top: 17%;
     font-size: 10px;
   }
 }
