--- a/component/Modal/LogoutModal.module.css
+++ b/component/Modal/LogoutModal.module.css
@@ -4,8 +4,9 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 10;
-  background: rgba(0, 0, 0, 0.75);
+  z-index: 101;
+  background: black;
+  opacity: 0.6;
 }
 
 .modal {
@@ -13,7 +14,7 @@
   top: 30vh;
   margin: 0 30%;
   width: 40%;
-  z-index: 100;
+  z-index: 101;
   overflow: hidden;
 }
 
