--- a/component/Modal/WishlistModal.module.css
+++ b/component/Modal/WishlistModal.module.css
@@ -68,10 +68,15 @@
 }
 
 @media (max-width: 899px) {
-  /* .modal {
-    left: calc(50% - 20rem);
-    width: 40rem;
-  } */
+ 
+   .modal {
+    margin: 0 5%;
+    width: 90%;
+  }
+
+  .content {
+    font-size: 1.5rem;
+  }
 
   .btn {
     width: 50%;
